# rustnomial

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: err.rs  lib.rs  macros.rs  main.rs  numerics.rs  strings.rs  terms.rs
src/benchmarks/: bench.rs
src/polynomial/: array_polynomial.rs  binomial.rs  derivative.rs  find_roots.rs  integral.rs  mod.rs  monomial.rs  poly_math.rs  polynomial.rs  sparsepolynomial.rs  traits.rs  trinomial.rs
src/rustnomial/: binomial.rs  constant.rs  degree.rs  derivative.rs  err.rs  find_roots.rs  integral.rs  macros.rs  mod.rs  monomial.rs  numerics.rs  poly_math.rs  polynomial.rs  roots.rs  sparsepolynomial.rs  strings.rs  terms.rs  traits.rs  trinomial.rs
