[package]
name = "rustnomial"
version = "0.0.7"
authors = ["Philippe Solodov <solop1906@gmail.com>"]
license = "MIT"
description = "A crate for working with polynomials."
repository = "https://github.com/philippeitis/rustnomial"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "**/*.md",
]

[lib]
name = "rustnomial"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
path = "src/benchmarks/bench.rs"

[features]
# no features by default
default = []

# Add feature "foo" here, then you can use it.
# Our "foo" feature depends on nothing else.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"
roots = "0.0.6"