[package]
name = "rustnomial"
version = "0.2.0"
authors = ["Philippe Solodov <solop1906@gmail.com>"]
license = "MIT"
description = "A crate for working with polynomials."
repository = "https://github.com/philippeitis/rustnomial"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "**/*.md",
]
edition = "2018"
keywords = ["polynomials", "no_std", "polynomial"]

[lib]
name = "rustnomial"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
path = "src/benchmarks/bench.rs"

[features]
default = []
array_polynomials = []
sparse_poly_trim = []

[dependencies]
num = "0.4.0"
roots = "0.0.6"